# Legal-lingo

./: .env.example  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/apis/: router.py
app/apis/health/: health.py
app/apis/health/models/: __init__.py  models.py
app/core/: __init__.py  config.py
app/core/db/: __init__.py  database.py
app/core/utils/response/: response.py
